[package]
name = "mvnup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.19"
cmd_lib = "1.3.0"
ctor = "0.1.21"
env_logger = "0.9.0"
futures-util = "0.3.18"
log = "0.4.14"
regex = "1.5.4"
reqwest = { version = "0.11", features = ["stream"] }
scraper = "0.12.0"
structopt = "0.3"
tempfile = "3.2.0"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
url = "2.2.2"
which = "4.2.2"

[features]
