[package]
name = "mvnup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.19"
cmd_lib = "1.3.0"
comfy-table = "5.0.0"
ctor = "0.1.21"
directories = "4.0.1"
env_logger = "0.9.0"
futures-util = "0.3.18"
getset = "0.1.2"
glob = "0.3.0"
infer = "0.5.0"
log = "0.4.14"
mime = "0.3.16"
once_cell = "1.8.0"
regex = "1.5.4"
reqwest = { version = "0.11", features = ["stream"] }
scraper = "0.12.0"
semver = "1.0.4"
structopt = "0.3"
strum = { version = "0.23.0", features = ["derive"] }
strum_macros = "0.23.1"

tokio = { version = "1", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "test-util",
] }
url = "2.2.2"
which = "4.2.2"

[dev-dependencies]
tempfile = "3.2.0"

[features]
